# promptwars-challenge

./: .env.example  .gitignore  Dockerfile  README.MD  deploy.sh  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: deploy.yml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  constraints.py  itinerary.py  preferences.py
app/routes/: __init__.py  api.py  pages.py
app/services/: __init__.py  constraints.py  firestore.py  google_calendar.py  google_maps.py  planner.py  weather.py
app/static/: app.js  style.css
app/templates/: base.html  index.html  itinerary.html
app/templates/partials/: alert_banner.html  budget_chart.html  chat_message.html  day_view.html  itinerary_full.html
tests/: __init__.py  conftest.py  test_accessibility.py  test_api.py  test_google_services.py  test_integration.py  test_models.py  test_planner.py  test_security.py  test_storage.py
